--- a/index.html
+++ b/index.html
@@ -572,9 +572,9 @@
                 <blockquote class="substep down-50 centered">… and displaying 200 years of
                     shoe-design engraved in headstones</blockquote>
             </div>
-            <div class="step"><h2 class="red">more examples</h2>
+        <!--    <div class="step"><h2 class="red">more examples</h2>
                 <p>… only if there is time left: flight from headstone to bookshelf</p>
-                <fieldset><legend>live demo</legend>butterflies – vlinders - papillon – Schmetterling</fieldset></div>
+                <fieldset><legend>live demo</legend>butterflies – vlinders - papillon – Schmetterling</fieldset></div> -->
             <div class="step">
                 <div class="centered">
                     <h2 class="red">challenge</h2>
@@ -747,7 +747,7 @@
                 </ul></div>
                 <div class="step">
                     <h2 class="red">Controlled vocabularies </h2>
-                <h3>florilegium – lilies
+                <h3>Linked Open Data … on lilies
                 </h3>
                 <ul class="line-height-one-five">
                 <li>Wasserzeichen<ul>
