some minor corrections

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         
         <!-- vis -->
         <script type="text/javascript" src="vendor/vis/vis.js"></script>
-        <link rel="stylesheet" href="vendor/vis/vis-network.min.css"  type="text/css" />
+        <link rel="stylesheet" href="vendor/vis/vis-network.min.css"/>
 
     </head>
 
@@ -140,7 +140,7 @@
                     <object data="https://whatisdigitalhumanities.com" width="900" height="600"
                         class="justified"></object>
                 </p>
-                <p class="small centered">For more definitions – <a title="refresh" onclick=""
+                <p class="small centered">For more definitions – <a title="Refresh this Slide"
                         >Refresh</a> this slide</p><p class="small right">
                     <a href="https://whatisdigitalhumanities.com" class="right"
                         >https://whatisdigitalhumanities.com</a></p>
@@ -620,7 +620,7 @@
                 </div>
             </div>
             <div class="step">
-                <h1 class="red">03</h1>
+                <h1 class="red" id="step/LOD">03</h1>
                 <h2 class="line-height-one-five">Linked Open Data <abbr>[LOD]</abbr></h2></div>
             <div class="step">
                 <h2 class="red">WWW vs LOD</h2>
